Add paused message and style buttons
* Add paused message to dialog
* Style save and cancel buttons
* Unify imports to not have .scss
* Improve error message to include meeting type

--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
@@ -32,11 +32,12 @@
         <mat-radio-button value="{{ reasons.report }}">{{ reasons.report }}</mat-radio-button>
       </mat-radio-group>
     </div>
+    <div class="warning">The application's active day count will be paused until an end date is provided.</div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
-    <div>
-      <button mat-button mat-dialog-close>Close</button>
-      <button mat-button type="submit" [disabled]="!meetingForm.form.valid">Save</button>
+    <div class="button-container">
+      <button mat-stroked-button color="primary" mat-dialog-close="false">Close</button>
+      <button mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">Save</button>
     </div>
   </mat-dialog-actions>
 </form>
