--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -10,8 +10,8 @@
 
 // ng-select
 @import '~@ng-select/ng-select/themes/material.theme.css';
-@import 'styles/ngselect.scss';
-@import 'styles/buttons.scss';
+@import 'styles/ngselect';
+@import 'styles/buttons';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
