--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.scss
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../styles/colors';
+
 .flex-container {
   display: flex;
   gap: 24px;
@@ -33,6 +35,6 @@ label {
 .warning {
   padding: 16px 8px;
   font-size: 16px;
-  background-color: #fee9b5;
+  background-color: $secondary-color-light;
   border-radius: 8px;
 }
