--- a/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
+++ b/alcs-frontend/src/app/shared/favorite-button/favorite-button.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/colors.scss';
+@import '../../../styles/colors';
 
 button.favorite-btn.gold {
   color: $favorite-star !important;
