Add Loading to Dialog Save buttons
* Prevent buttons from being activated multiple times
* Add material extensions for button and eventually datepicker and select

--- a/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
@@ -12,8 +12,10 @@
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div class="button-container">
-      <button mat-stroked-button color="primary" mat-dialog-close>Close</button>
-      <button mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">Save</button>
+      <button mat-stroked-button color="primary" mat-dialog-close="false">Close</button>
+      <button [loading]="isLoading" mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">
+        Save
+      </button>
     </div>
   </mat-dialog-actions>
 </form>
