--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -2,6 +2,7 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 @use '@matheo/datepicker/theming' as datepicker;
+@use '@ng-matero/extensions' as mtx;
 
 // Plus imports for other components in your app.
 @import 'styles/colors';
@@ -144,6 +145,9 @@ $alcs-theme: mat.define-light-theme(
 @include mat.all-component-themes($alcs-theme);
 
 @include datepicker.theme($alcs-theme);
+
+@include mtx.all-component-themes($alcs-theme);
+@include mtx.all-experimental-component-themes($alcs-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
