Update Inline Datepicker
* Says Add Date as link instead of Not Set, remove pencil
* Add min field to inline datepicker
* Add inline datepicker to both meeting and info request pages when end date is not set

--- a/alcs-frontend/src/app/features/application/info-requests/info-requests.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-requests.component.html
@@ -15,7 +15,16 @@
 
   <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef>Date Fulfilled</th>
-    <td mat-cell *matCellDef="let element">{{ element.endDate | momentFormat }}</td>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.endDate">{{ element.endDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.endDate">
+        <app-inline-datepicker
+          [selectedValue]="undefined"
+          [min]="element.startDate"
+          (save)="onSaveEndDate(element.uuid, $event)"
+        ></app-inline-datepicker>
+      </ng-container>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="description">
