--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting.component.html
@@ -17,7 +17,16 @@
 
   <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef>End Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.endDate | momentFormat }}</td>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.endDate">{{ element.endDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.endDate">
+        <app-inline-datepicker
+          [selectedValue]="undefined"
+          [min]="element.startDate"
+          (save)="onSaveSiteVisitEndDate(element.uuid, $event)"
+        ></app-inline-datepicker>
+      </ng-container>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="action">
@@ -63,7 +72,16 @@
 
   <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef>End Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.endDate | momentFormat }}</td>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.endDate">{{ element.endDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.endDate">
+        <app-inline-datepicker
+          [selectedValue]="undefined"
+          [min]="element.startDate"
+          (save)="onSaveAppMeetingEndDate(element.uuid, $event)"
+        ></app-inline-datepicker>
+      </ng-container>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="action">
