--- a/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
+++ b/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/colors';
+
 .editing {
   display: inline-block;
 }
@@ -21,7 +23,11 @@
   justify-content: flex-end;
 }
 
-.not-set {
-  color: #666;
-  font-style: italic;
+.add-date {
+  font-size: 14px !important;
+  cursor: pointer;
+}
+
+.save {
+  color: $primary-color;
 }
