--- a/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
+++ b/alcs-frontend/src/app/shared/meeting-overview/meeting-overview.component.scss
@@ -1,6 +1,26 @@
 @import '../../../styles/colors';
 @import '../../../styles/typography';
 
+.search-bar {
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.search-button {
+  flex-shrink: 0;
+}
+
+.search-input {
+  margin-right: 12px;
+  border: 1px solid $grey;
+  flex-grow: 1;
+  height: 26px;
+  border-radius: 6px;
+  padding: 12px 16px;
+  font-size: 16px;
+}
+
 .main-panel-header {
   box-shadow: 0 2px 8px 1px rgba(0, 0, 0, 0.25);
   border: 1px solid #ffffff;
@@ -40,6 +60,7 @@ mat-panel-description {
 
 .mat-expansion-panel-header-title {
   margin-right: 0;
+  flex-basis: auto;
 }
 
 
@@ -185,8 +206,19 @@ mat-panel-description {
   }
 }
 
+@keyframes border-pulsate {
+  0%   { border-color: rgba($primary-color, 1); }
+  50%  { border-color: rgba($primary-color, 0.2); }
+  100% { border-color: rgba($primary-color, 1); }
+}
+
 :host::ng-deep .application-panel {
   margin-bottom: 16px;
+
+  &.application-highlighted {
+    border: 5px solid rgba($primary-color, 0.5);
+    animation: border-pulsate 2s infinite;
+  }
 
   mat-expansion-panel-header {
     background-color: #fff;
