--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -218,7 +218,7 @@ body {
 
 .button-container {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
   button:not(:last-child) {
     margin-right: 24px !important;
