Change form style to Outline

--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
@@ -6,7 +6,7 @@
     <div class="flex-container">
       <div class="flex-child">
         <label for="startDate">Date requested <span>*</span></label>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="outline">
           <mat-label>Date requested</mat-label>
           <input
             matInput
@@ -24,7 +24,7 @@
 
       <div class="flex-child">
         <label for="endDate">Date fulfilled</label>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="outline">
           <mat-label>Date fulfilled</mat-label>
           <input
             matInput
