--- a/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
@@ -3,7 +3,7 @@
 </div>
 <form (ngSubmit)="onSubmit()" #meetingForm="ngForm">
   <mat-dialog-content style="height: 100%">
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="outline">
       <mat-label>Choose a date</mat-label>
       <input matInput [matDatepicker]="pdd" [(ngModel)]="model.date" name="date" required />
       <mat-datepicker-toggle matSuffix [for]="pdd"></mat-datepicker-toggle>
