--- a/alcs-frontend/src/app/shared/commenting/comments.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comments.component.html
@@ -1,6 +1,6 @@
 <div class="comments">
   <div class="subheading2 header">Comments ({{comments.length}})</div>
-  <mat-form-field *ngIf="!isEditing" class="placeholder-input" appearance="fill" (click)="onEdit()">
+  <mat-form-field *ngIf="!isEditing" class="placeholder-input" appearance="outline" (click)="onEdit()">
     <input matInput placeholder="Add a comment..." />
   </mat-form-field>
   <app-mention-textarea
