--- a/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.html
+++ b/alcs-frontend/src/app/shared/inline-datepicker/inline-datepicker.component.html
@@ -12,7 +12,7 @@
     }"
   >
     <form [formGroup]="form">
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="outline">
         <mat-label>Choose a date</mat-label>
         <input matInput [matDatepicker]="pdd" formControlName="date" [min]="minimum" />
         <mat-datepicker-toggle matSuffix [for]="pdd"></mat-datepicker-toggle>
