WIP reconsideration card create dialog and board

--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
@@ -32,12 +32,14 @@
         <mat-radio-button value="{{ reasons.report }}">{{ reasons.report }}</mat-radio-button>
       </mat-radio-group>
     </div>
-    <div class="warning">The application's active day count will be paused until an end date is provided.</div>
+    <div class="form-warning">The application's active day count will be paused until an end date is provided.</div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div class="button-container">
       <button mat-stroked-button color="primary" mat-dialog-close="false">Close</button>
-      <button [loading]="isLoading" mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">Save</button>
+      <button [loading]="isLoading" mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">
+        Save
+      </button>
     </div>
   </mat-dialog-actions>
 </form>
