--- a/alcs-frontend/src/app/features/board/board.component.html
+++ b/alcs-frontend/src/app/features/board/board.component.html
@@ -7,7 +7,9 @@
       </h2>
     </div>
     <div>
-      <button mat-flat-button color="primary" (click)="onCreate()">+ New Application</button>
+      <button mat-flat-button color="primary" (click)="onCreate()">
+        {{ createCardTitle }}
+      </button>
     </div>
   </div>
   <div class="board-content">
