--- a/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-rquest-dialog/info-request-dialog.component.html
@@ -67,12 +67,16 @@
         </mat-radio-group>
       </mat-form-field>
     </div>
-    <div class="warning">The application's active day count will be paused until a fulfillment date is provided.</div>
+    <div class="form-warning">
+      The application's active day count will be paused until a fulfillment date is provided.
+    </div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div class="button-container">
       <button mat-stroked-button color="primary" mat-dialog-close="false">Close</button>
-      <button [loading]="isLoading" mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">Save</button>
+      <button [loading]="isLoading" mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">
+        Save
+      </button>
     </div>
   </mat-dialog-actions>
 </form>
