--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -237,3 +237,10 @@ a {
 .mat-radio-label-content {
   width: 100%;
 }
+
+.form-warning {
+  padding: 16px 8px;
+  font-size: 16px;
+  background-color: $secondary-color-light;
+  border-radius: 8px;
+}
