--- a/alcs-frontend/src/styles/ngselect.scss
+++ b/alcs-frontend/src/styles/ngselect.scss
@@ -4,6 +4,7 @@
 .ng-select.card-type .ng-select-container,
 .ng-select.card-decision-maker .ng-select-container,
 .ng-select.card-region .ng-select-container,
+.ng-select.card-recon-type .ng-select-container,
 .ng-select.subtask-assignee .ng-select-container {
   .ng-value-container {
     margin-top: 15px;
