--- a/alcs-frontend/src/app/features/board/create-recon-card-dialog/create-recon-card-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/create-recon-card-dialog/create-recon-card-dialog.component.scss
@@ -42,3 +42,8 @@ mat-dialog-actions {
 .warning-section > div:last-child {
   margin-bottom: 0;
 }
+
+.btn-wrapper-right {
+  margin-left: auto;
+  margin-right: 0;
+}
