Change to 4 dates / 2 pauses
* Add new pipe for subtracting 1 day
* Separate create and edit dialog now that they are quite different

--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting-dialog/application-meeting-dialog.component.html
@@ -1,43 +1,79 @@
 <div mat-dialog-title>
-  <h2 class="card-title">{{ model.uuid ? 'Update' : 'Create' }} {{ model.meetingType?.label }}</h2>
+  <h2 class="card-title">Edit {{ model.meetingType?.label }}</h2>
 </div>
 <form (ngSubmit)="onSubmit()" #meetingForm="ngForm">
   <mat-dialog-content style="height: 100%">
     <div class="flex-container">
-      <mat-form-field appearance="fill" class="flex-child">
-        <mat-label>Choose a start date</mat-label>
+      <mat-form-field appearance="outline" class="flex-child">
+        <mat-label>{{ data.meetingType.code === 'AM' ? 'Meeting' : 'Visit' }} Requested</mat-label>
         <input
           matInput
-          [matDatepicker]="startDate"
-          [(ngModel)]="model.startDate"
-          name="startDate"
+          [matDatepicker]="meetingStartDate"
+          [(ngModel)]="model.meetingStartDate"
+          name="meetingStartDate"
           required
-          (dateChange)="startDateSelected()"
         />
-        <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
-        <mat-datepicker #startDate type="date"> </mat-datepicker>
+        <mat-datepicker-toggle matSuffix [for]="meetingStartDate"></mat-datepicker-toggle>
+        <mat-datepicker #meetingStartDate type="date"> </mat-datepicker>
       </mat-form-field>
 
-      <mat-form-field appearance="fill" class="flex-child">
-        <mat-label>Choose an end date</mat-label>
-        <input matInput [matDatepicker]="endDate" [(ngModel)]="model.endDate" name="endDate" [min]="model.startDate" />
-        <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
-        <mat-datepicker #endDate type="date"> </mat-datepicker>
+      <mat-form-field appearance="outline" class="flex-child">
+        <mat-label>{{ data.meetingType.code === 'AM' ? 'Meeting' : 'Visit' }} Conducted</mat-label>
+        <input
+          matInput
+          [matDatepicker]="meetingEndDate"
+          [(ngModel)]="model.meetingEndDate"
+          name="meetingEndDate"
+          [min]="model.meetingStartDate | lessOneDay"
+        />
+        <mat-datepicker-toggle matSuffix [for]="meetingEndDate"></mat-datepicker-toggle>
+        <mat-datepicker #meetingEndDate type="date"> </mat-datepicker>
       </mat-form-field>
     </div>
-    <div class="reason-wrapper">
-      <label class="radio-group-label" for="reason">Reason <span color="red">*</span></label>
-      <mat-radio-group aria-labelledby="Reason" [(ngModel)]="model.reason" name="reason" id="reason" required>
-        <mat-radio-button value="{{ reasons.meeting }}">{{ reasons.meeting }}</mat-radio-button>
-        <mat-radio-button value="{{ reasons.report }}">{{ reasons.report }}</mat-radio-button>
-      </mat-radio-group>
+    <div class="flex-container">
+      <mat-form-field appearance="outline" class="flex-child">
+        <mat-label>Report Sent</mat-label>
+        <input
+          matInput
+          [matDatepicker]="reportStartDate"
+          [(ngModel)]="model.reportStartDate"
+          [min]="model.meetingEndDate | lessOneDay"
+          name="reportStartDate"
+        />
+        <mat-datepicker-toggle matSuffix [for]="reportStartDate"></mat-datepicker-toggle>
+        <mat-datepicker #reportStartDate type="date"> </mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="flex-child">
+        <mat-label>Report Approved</mat-label>
+        <input
+          matInput
+          [matDatepicker]="reportEndDate"
+          [(ngModel)]="model.reportEndDate"
+          name="reportEndDate"
+          [min]="model.reportStartDate | lessOneDay"
+        />
+        <mat-datepicker-toggle matSuffix [for]="reportEndDate"></mat-datepicker-toggle>
+        <mat-datepicker #reportEndDate type="date"> </mat-datepicker>
+      </mat-form-field>
     </div>
-    <div class="warning">The application's active day count will be paused until an end date is provided.</div>
+    <div class="warning">
+      <mat-icon>warning</mat-icon>
+      <div>
+        The application’s active day count will be paused between the dates:
+        <ul>
+          <li>{{ data.meetingType.code === 'AM' ? 'Meeting' : 'Visit' }} Requested & {{ data.meetingType.code === 'AM' ? 'Meeting' : 'Visit' }} Conducted</li>
+          <li>Report Sent & Report Approved</li>
+        </ul>
+      </div>
+    </div>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div class="button-container">
       <button mat-stroked-button color="primary" mat-dialog-close="false">Close</button>
-      <button [loading]="isLoading" mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">Save</button>
+      <button [loading]="isLoading" mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">
+        Save
+      </button>
     </div>
   </mat-dialog-actions>
 </form>
