--- a/alcs-frontend/src/app/features/application/application-meeting/application-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/application-meeting/application-meeting.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container">
   <div class="col-40">
-    <h4>Site Visit Dates</h4>
+    <h4>Site Visits</h4>
   </div>
   <div class="pull-right">
     <button mat-flat-button color="primary" class="pull-right" (click)="onCreate({ code: 'SV', label: 'Site Visit' })">
@@ -10,20 +10,53 @@
 </div>
 
 <table mat-table [dataSource]="siteVisits" class="mat-elevation-z8 width-100 section">
-  <ng-container matColumnDef="startDate">
-    <th mat-header-cell *matHeaderCellDef>Start Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.startDate | momentFormat }}</td>
+  <ng-container matColumnDef="index">
+    <th mat-header-cell *matHeaderCellDef>#</th>
+    <td mat-cell *matCellDef="let i = index">{{ siteVisits.length - i }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="endDate">
-    <th mat-header-cell *matHeaderCellDef>End Date</th>
+  <ng-container matColumnDef="meetingStartDate">
+    <th mat-header-cell *matHeaderCellDef>Visit Requested</th>
+    <td mat-cell *matCellDef="let element">{{ element.meetingStartDate | momentFormat }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="meetingEndDate">
+    <th mat-header-cell *matHeaderCellDef>Visit Conducted</th>
     <td mat-cell *matCellDef="let element">
-      <ng-container *ngIf="element.endDate">{{ element.endDate | momentFormat }}</ng-container>
-      <ng-container *ngIf="!element.endDate">
+      <ng-container *ngIf="element.meetingEndDate">{{ element.meetingEndDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.meetingEndDate">
         <app-inline-datepicker
           [selectedValue]="undefined"
-          [min]="element.startDate"
-          (save)="onSaveSiteVisitEndDate(element.uuid, $event)"
+          [min]="element.meetingStartDate | lessOneDay"
+          (save)="onSaveMeetingEndDate(element.uuid, $event)"
+        ></app-inline-datepicker>
+      </ng-container>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="reportStartDate">
+    <th mat-header-cell *matHeaderCellDef>Report Sent</th>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.reportStartDate">{{ element.reportStartDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.reportStartDate && element.meetingEndDate">
+        <app-inline-datepicker
+          [selectedValue]="undefined"
+          [min]="element.meetingEndDate | lessOneDay"
+          (save)="onSaveReportStartDate(element.uuid, $event)"
+        ></app-inline-datepicker>
+      </ng-container>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="reportEndDate">
+    <th mat-header-cell *matHeaderCellDef>Report Approved</th>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.reportEndDate">{{ element.reportEndDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.reportEndDate && element.reportStartDate">
+        <app-inline-datepicker
+          [selectedValue]="undefined"
+          [min]="element.reportStartDate | lessOneDay"
+          (save)="onSaveReportEndDate(element.uuid, $event)"
         ></app-inline-datepicker>
       </ng-container>
     </td>
@@ -44,7 +77,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   <tr class="mat-row" *matNoDataRow>
-    <td class="text-center" colspan="3">No data</td>
+    <td class="text-center" colspan="5">No data</td>
   </tr>
 </table>
 
@@ -65,20 +98,53 @@
 </div>
 
 <table mat-table [dataSource]="applicantMeetings" class="mat-elevation-z8 width-100 section">
-  <ng-container matColumnDef="startDate">
-    <th mat-header-cell *matHeaderCellDef>Start Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.startDate | momentFormat }}</td>
+  <ng-container matColumnDef="index">
+    <th mat-header-cell *matHeaderCellDef>Index</th>
+    <td mat-cell *matCellDef="let i = index">{{ applicantMeetings.length - i }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="endDate">
-    <th mat-header-cell *matHeaderCellDef>End Date</th>
+  <ng-container matColumnDef="meetingStartDate">
+    <th mat-header-cell *matHeaderCellDef>Meeting Requested</th>
+    <td mat-cell *matCellDef="let element">{{ element.meetingStartDate | momentFormat }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="meetingEndDate">
+    <th mat-header-cell *matHeaderCellDef>Meeting Conducted</th>
     <td mat-cell *matCellDef="let element">
-      <ng-container *ngIf="element.endDate">{{ element.endDate | momentFormat }}</ng-container>
-      <ng-container *ngIf="!element.endDate">
+      <ng-container *ngIf="element.meetingEndDate">{{ element.meetingEndDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.meetingEndDate">
         <app-inline-datepicker
           [selectedValue]="undefined"
-          [min]="element.startDate"
-          (save)="onSaveAppMeetingEndDate(element.uuid, $event)"
+          [min]="element.meetingStartDate | lessOneDay"
+          (save)="onSaveMeetingEndDate(element.uuid, $event)"
+        ></app-inline-datepicker>
+      </ng-container>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="reportStartDate">
+    <th mat-header-cell *matHeaderCellDef>Report Sent</th>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.reportStartDate">{{ element.reportStartDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.reportStartDate && element.meetingEndDate">
+        <app-inline-datepicker
+          [selectedValue]="undefined"
+          [min]="element.meetingEndDate | lessOneDay"
+          (save)="onSaveReportStartDate(element.uuid, $event)"
+        ></app-inline-datepicker>
+      </ng-container>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="reportEndDate">
+    <th mat-header-cell *matHeaderCellDef>Report Approved</th>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.reportEndDate">{{ element.reportEndDate | momentFormat }}</ng-container>
+      <ng-container *ngIf="!element.reportEndDate && element.reportStartDate">
+        <app-inline-datepicker
+          [selectedValue]="undefined"
+          [min]="element.reportStartDate | lessOneDay"
+          (save)="onSaveReportEndDate(element.uuid, $event)"
         ></app-inline-datepicker>
       </ng-container>
     </td>
@@ -99,6 +165,6 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   <tr class="mat-row" *matNoDataRow>
-    <td class="text-center" colspan="3">No data</td>
+    <td class="text-center" colspan="5">No data</td>
   </tr>
 </table>
