--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -6,7 +6,7 @@
   [ngClass]="{ paused: cardData.paused, 'decision-date': cardData.latestDecisionDate }"
   cdkDrag
   [cdkDragData]="cardData"
-  (click)="onClick(cardData.id)"
+  (click)="onClick(cardData.id, cardData.cardType)"
 >
   <div class="card-content">
     <div class="upper-card">
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="lower-card">
-      <div class="active-days center">
+      <div *ngIf="cardData.type.code !== 'RECON'" class="active-days center">
         <mat-icon title="Active Days">calendar_month</mat-icon>
         <span class="center">{{ cardData.activeDays }}</span>
       </div>
