WIP: switch subtask to use cardUuid instead of appFileNumber

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -132,7 +132,7 @@
     </ng-select>
   </div>
   <div class="subtasks-wrapper">
-    <app-subtasks [fileNumber]="application.fileNumber"></app-subtasks>
+    <app-subtasks [cardUuid]="application.card.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
     <app-comments [fileNumber]="application.fileNumber"></app-comments>
