subtasks and comments for cards

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -135,6 +135,6 @@
     <app-subtasks [cardUuid]="application.card.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
-    <app-comments [fileNumber]="application.fileNumber"></app-comments>
+    <app-comments [cardUuid]="application.card.uuid" [fileNumber]="application.fileNumber"></app-comments>
   </div>
 </mat-dialog-content>
