--- a/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/recon-card-detail-dialog/recon-card-detail-dialog.component.html
@@ -96,6 +96,6 @@
     <app-subtasks [cardUuid]="recon.uuid"></app-subtasks>
   </div>
   <div class="card-comments-wrapper">
-    <app-comments [fileNumber]="recon.applicationFileNumber"></app-comments>
+    <app-comments [cardUuid]="recon.uuid"></app-comments>
   </div>
 </mat-dialog-content>
