update assignee view for recon card

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -89,8 +89,8 @@
         <div
           class="priority"
           [ngClass]="{
-            'filled-priority': application.highPriority,
-            'empty-priority': !application.highPriority
+            'filled-priority': application.card.highPriority,
+            'empty-priority': !application.card.highPriority
           }"
         ></div>
       </button>
